--- a/_posts/2018-12-05-富人死于信托？NO,富人爱死信托.md
+++ b/_posts/2018-12-05-富人死于信托？NO,富人爱死信托.md
@@ -36,3 +36,11 @@ typora-root-url: ..\img
 ​       好了总结一下，有钱人为什么要成立信托呢，因为省心，方便，安全，就那么简单，谢谢!
 
 PS：信托不刚兑，但是信托公司会尽最大的努力帮委托人打理好每一笔财产，这是每个信托人应尽的责任~~~~
+
+END
+
+------
+
+*我是一个爱理财的臭宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
+
+![post-181208-6](/../../../../hughhw.github.io/img/post-181208-6.jpg)
