--- a/_posts/2018-12-08-支付宝里面的钱是马云爸爸管的吗？.md
+++ b/_posts/2018-12-08-支付宝里面的钱是马云爸爸管的吗？.md
@@ -40,9 +40,13 @@ tags:
 
 所以，存哪里合适，你是不是有答案了呢，嘿嘿。
 
-​        我是一个爱理财的臭宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的亲们可以加我公众号呀，鼓掌！
+END
 
-![post-181208-6](/../../../../hughhw.github.io/img/post-181208-6.jpg)
+------
+
+*我是一个爱理财的臭宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
+
+![post-181208-6](C:/Users/ThinkPad/hughhw.github.io/img/post-181208-6.jpg)
 
 
 
