4 new posts added
from 2020-1~2020-3-23

--- a/_posts/2018-12-13-你说的存款，它不是存款.md
+++ b/_posts/2018-12-13-你说的存款，它不是存款.md
@@ -3,7 +3,7 @@ layout:     post
 title:      你说的存款，它不是存款
 subtitle:   悟空问答：什么是结构性存款？
 date:       2018-12-13
-author:     爱理财的臭宝妈
+author:     散户瑄瑄
 header-img: img/post-bg-js-version.jpg
 catalog: true
 tags:
@@ -42,6 +42,6 @@ END
 
 ------
 
-*我是一个爱理财的臭宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
+*我是一个爱理财的宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
 
 ![post-181208-6](/../../../../hughhw.github.io/img/post-181208-6.jpg)
