--- a/_posts/2019-01-01-新年杠精第一弹.md
+++ b/_posts/2019-01-01-新年杠精第一弹.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      新年杠精第一弹
-subtitle:   新年杠精第一弹
+subtitle:   吐槽
 date:       2019-01-01
 author:     散户瑄瑄
 header-img: img/post-bg-wave.jpg
@@ -33,7 +33,7 @@ tags:
 
 ​		“那基金设立时候就要算好的呀，还有现在谁这么无聊去挤兑”
 
-![post-181219-1](/../../../../hughhw.github.io/img/post-190101-1.jpg)
+![post-190101-1](/../../../../hughhw.github.io/img/post-190101-1.jpg)
 
 ​		现在是瑄瑄的科普时间，叮铃铃~~
 
