--- a/_posts/2018-12-10-存款利息怎么算？我猜你一定不知道.md
+++ b/_posts/2018-12-10-存款利息怎么算？我猜你一定不知道.md
@@ -3,7 +3,7 @@ layout:     post
 title:      存款利息怎么算？我猜你一定不知道
 subtitle:   悟空问答：在银行的存款利率是按存入时的利率算还是按到期取出的利率算？
 date:       2018-12-10
-author:     爱理财的臭宝妈
+author:     散户瑄瑄
 header-img: img/post-bg-kuaidi.jpg
 catalog: true
 tags:
@@ -42,6 +42,6 @@ END
 
 ------
 
-*我是一个爱理财的臭宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
+*我是一个爱理财的宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
 
 ![post-181208-6](/../../../../hughhw.github.io/img/post-181208-6.jpg)
