--- a/_posts/2018-12-19-在流急路陡的中途寻找胜利的信心.md
+++ b/_posts/2018-12-19-在流急路陡的中途寻找胜利的信心.md
@@ -3,7 +3,7 @@ layout:     post
 title:      在流急路陡的中途寻找胜利的信心
 subtitle:   宝爸看完改革开放40周年报告写的心得体会
 date:       2018-12-19
-author:     爱投资的臭宝爸
+author:     爱投资的宝爸
 header-img: img/post-bg-wave.jpg
 catalog: true
 tags:
@@ -31,6 +31,6 @@ tags:
 
 ------
 
-*我是一个爱理财的臭宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
+*我是一个爱理财的宝妈，在基金一线工作了很多年，深入打入内部了解各种理财的玩法，当然我自己也一直在积极的探索中，怎样带领大家避开理财的坑。想摆脱“富豪死于信托，中产死于理财，屌丝死于P2P”的大魔咒的亲们可以加我公众号呀，鼓掌！*
 
 ![post-181208-6](/../../../../hughhw.github.io/img/post-181208-6.jpg)
